# conan-lief

./: .travis.yml  CMakeLists.txt  appveyor.yml  azure-pipelines.yml  build.py  conanfile.py
patches/: 001_no_require_git.patch  002_install_one_config.patch  003_link_to_conan_mbedtls.patch  004_new_rang_compat.patch  005_json_right_include_path.patch
test_package/: CMakeLists.txt  test_package.cpp
